cluster/apps/backend/databases/cockroachdb/client.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: cockroachdb-client-secure
  namespace: cockroach-operator-system
spec:
  serviceAccountName: cockroachdb-sa
  containers:
    - name: cockroachdb-client-secure
      image: cockroachdb/cockroach:v21.2.9
      imagePullPolicy: IfNotPresent
      volumeMounts:
        - name: client-certs
          mountPath: /cockroach/cockroach-certs/
      command:
        - sleep
        - "2147483648" # 2^31
  terminationGracePeriodSeconds: 0
  volumes:
    - name: client-certs
      projected:
        sources:
          - secret:
              name: cockroachdb-node
              items:
                - key: ca.crt
                  path: ca.crt
          - secret:
              name: cockroachdb-root
              items:
                - key: tls.crt
                  path: client.root.crt
                - key: tls.key
                  path: client.root.key
        defaultMode: 256
