cluster/apps/backend/databases/cockroachdb/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-cockroachdb
  # namespace: networking
  namespace: cockroach-operator-system
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - match: Host(`roachdb.${SECRET_DOMAIN}`)
      kind: Rule
      # Enable auth middleware
      # middlewares:
      #   - name: rfc1918
      #   # - name: basicauth
      services:
        - name: cockroachdb-public
          namespace: cockroach-operator-system
          port: 8080
  # Use the secret generated by cert-manager
  tls:
    secretName: cockroachdb-node
    # secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
